--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="str_token_expried">Phiên đăng nhập hết hạn</string>
     <string name="str_server_busy">Server bận</string>
     <string name="str_no_internet_connect">Không có kết nối mạng</string>
-    <string name="cultureplex">Cultureplex</string>
+    <string name="cultureplex">Cinema</string>
     <string name="dat_ve_theo_phim">Đặt vé theo phim</string>
     <string name="dat_ve_theo_rap">Đặt bé theo rạp</string>
     <string name="trang_chu">Trang chủ</string>
